# Databank

./: .gitignore  AUTHORS.md  CONTRIBUTION.md  MANIFEST.in  README.md  pyproject.toml  tox.ini
.github/workflows/: build-docker-images.yml  build.yml  docs.yml  lint.yml  readthedocs-link.yml  release.yml  tests-all.yml  tests-min.yml
developer/: AutocompleteMetadata.py  ProcessInfoFile.py  RunAnalysis.py  ValidateData.py  align-mapping.py  align_mapping.py  buildH_calcOP_test.py  check_densities.py  check_mappings.py
developer/docker/: README.md  core
docs/: README.md  requirements.txt
docs/src/: Overview.rst  conf.py  dbcontribute.rst  dbprograms.rst  dbstructure.rst  gettingstarted.rst  index.rst  run_apidoc.py
docs/src/api/: exampleAndTutorials.rst
docs/src/contrib/: addingExpData.rst  addingMolecule.rst  addingSimulation.rst
docs/src/miscsrc/: OrderParameter.rst  buildH_calcOP_test.rst  check_mappings.rst  unittesting.rst
docs/src/schemas/: experiment_metadata.md  molecule_metadata.rst  moleculesAndMapping.md  simulation_metadata.md
src/: .gitignore
src/DatabankLib/: maicos.py
src/DatabankLib/settings/: elements.py
src/fairmd/lipids/: __init__.py  analyze.py  analyze_nmrpca.py  core.py  databankLibrary.py  databankio.py  maicos.py  molecules.py  plottings.py  quality.py  utils.py
src/fairmd/lipids/SchemaValidation/Schema/: READMEexplanations.yaml  info_template.yaml  info_yml_schema.json  metadata_schema.json  metadata_template.yaml
src/fairmd/lipids/analib/: maicos.py
src/fairmd/lipids/auxiliary/: __init__.py
src/fairmd/lipids/ipylib/: __init__.py
src/fairmd/lipids/settings/: elements.py  engines.py  molecules.py
tests/: conftest.py  test_add_simulation.py  test_analyze.py  test_api.py  test_loads.py  test_misc.py  test_molecules.py  test_recompute_api.py  test_yaml_validation.py
tests/misc_data/: popc1.gro  popc2.gro  pope1.gro
